<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btnRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_record"
        android:onClick="onRecord" />

    <LinearLayout
        android:id="@+id/btnBarControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnPlayStop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_play"
            android:onClick="onPlayStop" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_delete"
            android:onClick="onDelete" />
        
    </LinearLayout>

</RelativeLayout>